k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: myfunctionapp
  labels:
    app.kubernetes.io/name: myfunctionapp-web
    app.kubernetes.io/part-of: myfunctionapp
